--- a/pagina1.css
+++ b/pagina1.css
@@ -1,24 +1,163 @@
-html {margin: 10px 200px 10px 180px;
-      background-color: #E0E0E0;
-      color: #050505
+html {
+  margin: 5px 15px 10px 15px;
+  background-color: #E0E0E0;
+  color: #050505;
 }
-h1 {
+body{
+  width: inherit;
+  height: inherit;
+
+}
+
+header {
+  position: sticky;
   height: auto;
   width: auto;
   color: #050505;
   font-size: auto;
   font-family: 'Playfair Display', serif;
   text-align: center;
-  border-bottom: 1px solid #999999;
+  border-bottom: 2px ridge #999999;
+  border-radius: 9px;
+  border-top: 2px ridge #999999;
+  margin: 10px;
 }
+
+h1 {
+  margin-left: 10px;
+}
+
+h2, h3 {
+  font-family: 'Playfair Display', serif;
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
+  margin-left: 14px;
+}
+
+#artigo1 {
+  color: #000000;
+  width: inherit;
+  height: auto;
+  border: 1px;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 20px;
+  border-left: 3px ridge;
+  border-right: 2px ridge;
+  border-top: 2px ridge;
+  border-bottom: 2px ridge;
+}
+
 #imagem1 {
-  height: 250px;
-  width: auto;
-  padding: 0px 17px 1px 0px;
+  float: left;
+  max-width: 400px;
+  height: auto;
+  border-radius: 8px;
+  margin: 8px 17px 8px 1px;
+  border-style: solid;
+  border-width: thin;
+}
+
+#artigo2 {
+  color: #000000;
+  width: inherit;
+  height: 100%;
+
+  padding: 10px;
+  margin: 20px;
+}
+
+
+}
+#clearfix {
+  clear: both;
 
 }
 
-h2{
+#div1 {
 
- }
- p {font-family: 'Roboto', sans-serif;}
+  height: 150px;
+  padding: 0px 30px 0px 1px;
+  max-height: 100%;
+  width:auto;
+  position: sticky;
+
+}
+
+#div2 {
+
+  max-height: 100%;
+  width: auto;
+  padding: 0px 0px 0px 10px;
+  position: relative;
+
+}
+div.box {
+	width: 150px;
+	display: inline-block;
+}
+
+#botao_5g {
+  max-width: inherit;
+  height: auto;
+  border-radius: 8px;
+  border: 1px;
+  border-width: thin;
+  margin-bottom: 35px;
+
+}
+
+iframe {
+  max-width: 100%;
+  height: auto;
+}
+
+
+nav{
+   display: flex;
+   justify-content: left;
+   margin-left: 15px;
+   font-family: 'Dosis', sans-serif;
+
+}
+
+#ul1 {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #383838;
+  border-radius: 4px;
+}
+
+#li1 {
+  float: left;
+   border-right: 1px solid #bbb;
+}
+
+#li1 a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+#li1 a:hover {
+  background-color: #787878;
+}
+
+
+#botao_fale_conosco {
+  float: right;
+}
+#imagem_pagina_2 {
+  max-width: 30%;
+  height: auto;
+  border-radius: 5px;
+  margin: 10px 20px 0px 12px;
+  border-style: solid;
+  border-width: 1px;
+
+}
